--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,41 +1,61 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.5)
 
-project(RayTracer)
+# Project name and version
+project(RayTracer VERSION 1.0)
+
+# Options for optional dependencies
+option(SFML "Hook SFML" OFF)
+option(STB_IMAGE_WRITE "Hook stb_image_write" OFF)
+option(OPENMP "Enable OpenMP" OFF)
+
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Set output directory for runtime binaries
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+
+file(GLOB_RECURSE SOURCES src/*.cpp)
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_include_directories(${PROJECT_NAME} PRIVATE src)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
 
 # Libraries
 include(FetchContent)
 
-# stb_image_write
-message(STATUS "Fetching stb_image_write")
-FetchContent_Declare(
-    stb_image_write
-    GIT_REPOSITORY https://github.com/nothings/stb.git
-    GIT_TAG        master
-)
-FetchContent_MakeAvailable(stb_image_write)
-message(STATUS "Fetching stb_image_write done")
+if (STB_IMAGE_WRITE)
+    message(STATUS "Fetching stb_image_write")
+    FetchContent_Declare(
+            stb_image_write
+            GIT_REPOSITORY https://github.com/nothings/stb.git
+            GIT_TAG master
+    )
+    FetchContent_MakeAvailable(stb_image_write)
+    target_include_directories(${PROJECT_NAME} PRIVATE ${stb_image_write_SOURCE_DIR})
+    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLIB_STB_IMAGE_WRITE)
 
-# SFML
-message(STATUS "Fetching SFML")
-FetchContent_Declare(
-    SFML
-    GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG        2.6.1
-)
-FetchContent_MakeAvailable(SFML)
-message(STATUS "Fetching SFML done")
+endif ()
 
-# OpenMP
-find_package(OpenMP REQUIRED)
+if (SFML)
+    message(STATUS "Fetching SFML")
+    FetchContent_Declare(
+            SFML
+            GIT_REPOSITORY https://github.com/SFML/SFML.git
+            GIT_TAG 2.6.1
+    )
+    FetchContent_MakeAvailable(SFML)
+    message(STATUS "Fetching SFML done")
+    target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics sfml-window sfml-system)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLIB_SFML)
+endif ()
 
-# Executable
-file(GLOB_RECURSE SOURCES src/*.cpp)
-add_executable(${PROJECT_NAME} ${SOURCES})
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -fopenmp)
-target_include_directories(${PROJECT_NAME} PRIVATE src)
-target_include_directories(${PROJECT_NAME}  PRIVATE ${stb_image_write_SOURCE_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics sfml-window sfml-system OpenMP::OpenMP_CXX)
+if (OPENMP)
+    find_package(OpenMP)
+    if (OpenMP_CXX_FOUND)
+        target_compile_options(${PROJECT_NAME} PRIVATE ${OpenMP_CXX_FLAGS})
+        target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX gomp)
+        target_compile_definitions(${PROJECT_NAME} PRIVATE -DLIB_OPENMP)
+    endif ()
+endif ()
+
 
