--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
 
-# Project name and version
 project(RayTracer VERSION 1.0)
 
-# Options for optional dependencies
-option(SFML "Hook SFML" ON)
-option(STB_IMAGE_WRITE "Hook stb_image_write" ON)
-option(OPENMP "Enable OpenMP" ON)
-
-# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Set output directory for runtime binaries
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
-# Executable
 add_executable(${PROJECT_NAME}
         src/main.cpp
 
@@ -62,43 +52,43 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC OUT_DIR=\"${OUT_DIR}\")
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
 
-
 # Libraries
 include(FetchContent)
 
-if (STB_IMAGE_WRITE)
-    message(STATUS "Fetching stb_image_write")
-    FetchContent_Declare(
-            stb_image_write
-            GIT_REPOSITORY https://github.com/nothings/stb.git
-            GIT_TAG master
-    )
-    FetchContent_MakeAvailable(stb_image_write)
-    target_include_directories(${PROJECT_NAME} PRIVATE ${stb_image_write_SOURCE_DIR})
-    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLIB_STB_IMAGE_WRITE)
-
-endif ()
-
-if (SFML)
-    message(STATUS "Fetching SFML")
-    FetchContent_Declare(
-            SFML
-            GIT_REPOSITORY https://github.com/SFML/SFML.git
-            GIT_TAG 2.6.1
-    )
-    FetchContent_MakeAvailable(SFML)
-    message(STATUS "Fetching SFML done")
-    target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics sfml-window sfml-system)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLIB_SFML)
-endif ()
-
-if (OPENMP)
-    find_package(OpenMP)
-    if (OpenMP_CXX_FOUND)
-        target_compile_options(${PROJECT_NAME} PRIVATE ${OpenMP_CXX_FLAGS})
-        target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX gomp)
-        target_compile_definitions(${PROJECT_NAME} PRIVATE -DLIB_OPENMP)
-    endif ()
-endif ()
+# stb_image
+message(STATUS "Fetching stb_image")
+FetchContent_Declare(
+        stb_image
+        GIT_REPOSITORY https://github.com/nothings/stb.git
+        GIT_TAG master
+)
+FetchContent_MakeAvailable(stb_image)
+target_include_directories(${PROJECT_NAME} PRIVATE ${stb_image_SOURCE_DIR})
 
 
+# SFML
+message(STATUS "Fetching SFML")
+FetchContent_Declare(
+        SFML
+        GIT_REPOSITORY https://github.com/SFML/SFML.git
+        GIT_TAG 2.6.1
+)
+FetchContent_MakeAvailable(SFML)
+message(STATUS "Fetching SFML done")
+target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics sfml-window sfml-system)
+
+# OpenMP
+find_package(OpenMP REQUIRED)
+target_compile_options(${PROJECT_NAME} PRIVATE ${OpenMP_CXX_FLAGS})
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX gomp)
+
+# nlohmann_json
+message(STATUS "Fetching nlohmann_json")
+set(JSON_BuildTests OFF CACHE INTERNAL "")
+FetchContent_Declare(
+        json
+        DOWNLOAD_NO_EXTRACT ON
+        URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz
+)
+FetchContent_MakeAvailable(json)
+target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
